Add component and target classes

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "autoload": {
         "psr-4": {
-            "gelige\\yii2\\rollbar\\": ""
+            "gelige\\yii\\rollbar\\": "src"
         }
     }
 }
